test_suite5/ALAN/test_suite/alan-2022-examples/failing/005340_mutation.alan
source j begin leave r to / C end
